src/objects/Costcentre__c.object
<CustomObject>
    <customHelpPage>Costcentershelppage</customHelpPage>
    <fields>
        <fullName>CRM__c</fullName>
        <label>Performance CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>Performance ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DONT USE THIS</description>
        <label>Fiscal year</label>
        <referenceTo>Musqot_fiscal_year__c</referenceTo>
        <relationshipLabel>Cost centers</relationshipLabel>
        <relationshipName>Cost_centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overveiw__c</fullName>
        <label>Overveiw</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Social_media__c</fullName>
        <label>Performance Social media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <formula>CASE(Status__c, &apos;Not started&apos;, IMAGE(&apos;/resource/1433929854000/musqot__Planned&apos;,TEXT(Status__c),16,16), &apos;Active&apos;, IMAGE(&apos;/resource/1433930034000/musqot__Active&apos;,TEXT(Status__c),16,16),&apos;Closed&apos;,IMAGE(&apos;/resource/1433930023000/musqot__Deferred&apos;,TEXT(Status__c),16,16),  IMAGE(&apos;/resource/1446332034000/musqot__StatusOther&apos;,TEXT(Status__c),16,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cc_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DONT USE THIS</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Costcentres</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cost center</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cost centre name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>